--- a/.github/workflows/operations.yml
+++ b/.github/workflows/operations.yml
@@ -50,85 +50,85 @@ jobs:
       #     cp -r $GITHUB_WORKSPACE/www/* /var/www/repomanager/
       #     cp $GITHUB_WORKSPACE/www/version /var/lib/repomanager/version.available
 
-      - name: Set up repomanager main config
-        run: |
-          curl -s -L -o /var/lib/repomanager/db/repomanager.db https://github.com/lbr38/resources/raw/main/ci/repomanager/repomanager.db 2> /dev/null
-          curl -s -L -o /var/lib/repomanager/db/repomanager-hosts.db https://github.com/lbr38/resources/raw/main/ci/repomanager/repomanager-hosts.db 2> /dev/null
-          ls -l /var/lib/repomanager/configurations/
-          ls -l /var/lib/repomanager/db/
+      # - name: Set up repomanager main config
+      #   run: |
+      #     curl -s -L -o /var/lib/repomanager/db/repomanager.db https://github.com/lbr38/resources/raw/main/ci/repomanager/repomanager.db 2> /dev/null
+      #     curl -s -L -o /var/lib/repomanager/db/repomanager-hosts.db https://github.com/lbr38/resources/raw/main/ci/repomanager/repomanager-hosts.db 2> /dev/null
+      #     ls -l /var/lib/repomanager/configurations/
+      #     ls -l /var/lib/repomanager/db/
 
-      - name: Retrieve jobs
-        run: |
-          curl -s -o /var/lib/repomanager/operations/pool/ci-deb-mirror-repo.json https://raw.githubusercontent.com/lbr38/resources/main/ci/repomanager/operations/deb/ci-mirror-repo.json 2> /dev/null
-          curl -s -o /var/lib/repomanager/operations/pool/ci-deb-update-repo.json https://raw.githubusercontent.com/lbr38/resources/main/ci/repomanager/operations/deb/ci-update-repo.json 2> /dev/null
-          curl -s -o /var/lib/repomanager/operations/pool/ci-deb-duplicate-repo.json https://raw.githubusercontent.com/lbr38/resources/main/ci/repomanager/operations/deb/ci-duplicate-repo.json 2> /dev/null
-          curl -s -o /var/lib/repomanager/operations/pool/ci-deb-create-env.json https://raw.githubusercontent.com/lbr38/resources/main/ci/repomanager/operations/deb/ci-create-env.json 2> /dev/null
-          curl -s -o /var/lib/repomanager/operations/pool/ci-deb-delete.json https://raw.githubusercontent.com/lbr38/resources/main/ci/repomanager/operations/deb/ci-delete.json 2> /dev/null
-          curl -s -o /var/lib/repomanager/operations/pool/ci-deb-rebuild.json https://raw.githubusercontent.com/lbr38/resources/main/ci/repomanager/operations/deb/ci-rebuild.json 2> /dev/null
+      # - name: Retrieve jobs
+      #   run: |
+      #     curl -s -o /var/lib/repomanager/operations/pool/ci-deb-mirror-repo.json https://raw.githubusercontent.com/lbr38/resources/main/ci/repomanager/operations/deb/ci-mirror-repo.json 2> /dev/null
+      #     curl -s -o /var/lib/repomanager/operations/pool/ci-deb-update-repo.json https://raw.githubusercontent.com/lbr38/resources/main/ci/repomanager/operations/deb/ci-update-repo.json 2> /dev/null
+      #     curl -s -o /var/lib/repomanager/operations/pool/ci-deb-duplicate-repo.json https://raw.githubusercontent.com/lbr38/resources/main/ci/repomanager/operations/deb/ci-duplicate-repo.json 2> /dev/null
+      #     curl -s -o /var/lib/repomanager/operations/pool/ci-deb-create-env.json https://raw.githubusercontent.com/lbr38/resources/main/ci/repomanager/operations/deb/ci-create-env.json 2> /dev/null
+      #     curl -s -o /var/lib/repomanager/operations/pool/ci-deb-delete.json https://raw.githubusercontent.com/lbr38/resources/main/ci/repomanager/operations/deb/ci-delete.json 2> /dev/null
+      #     curl -s -o /var/lib/repomanager/operations/pool/ci-deb-rebuild.json https://raw.githubusercontent.com/lbr38/resources/main/ci/repomanager/operations/deb/ci-rebuild.json 2> /dev/null
           
-          curl -s -o /var/lib/repomanager/operations/pool/ci-rpm-mirror-repo.json https://raw.githubusercontent.com/lbr38/resources/main/ci/repomanager/operations/rpm/ci-mirror-repo.json 2> /dev/null
-          curl -s -o /var/lib/repomanager/operations/pool/ci-rpm-update-repo.json https://raw.githubusercontent.com/lbr38/resources/main/ci/repomanager/operations/rpm/ci-update-repo.json 2> /dev/null
-          curl -s -o /var/lib/repomanager/operations/pool/ci-rpm-duplicate-repo.json https://raw.githubusercontent.com/lbr38/resources/main/ci/repomanager/operations/rpm/ci-duplicate-repo.json 2> /dev/null
-          curl -s -o /var/lib/repomanager/operations/pool/ci-rpm-create-env.json https://raw.githubusercontent.com/lbr38/resources/main/ci/repomanager/operations/rpm/ci-create-env.json 2> /dev/null
-          curl -s -o /var/lib/repomanager/operations/pool/ci-rpm-delete.json https://raw.githubusercontent.com/lbr38/resources/main/ci/repomanager/operations/rpm/ci-delete.json 2> /dev/null
-          curl -s -o /var/lib/repomanager/operations/pool/ci-rpm-rebuild.json https://raw.githubusercontent.com/lbr38/resources/main/ci/repomanager/operations/rpm/ci-rebuild.json 2> /dev/null
+      #     curl -s -o /var/lib/repomanager/operations/pool/ci-rpm-mirror-repo.json https://raw.githubusercontent.com/lbr38/resources/main/ci/repomanager/operations/rpm/ci-mirror-repo.json 2> /dev/null
+      #     curl -s -o /var/lib/repomanager/operations/pool/ci-rpm-update-repo.json https://raw.githubusercontent.com/lbr38/resources/main/ci/repomanager/operations/rpm/ci-update-repo.json 2> /dev/null
+      #     curl -s -o /var/lib/repomanager/operations/pool/ci-rpm-duplicate-repo.json https://raw.githubusercontent.com/lbr38/resources/main/ci/repomanager/operations/rpm/ci-duplicate-repo.json 2> /dev/null
+      #     curl -s -o /var/lib/repomanager/operations/pool/ci-rpm-create-env.json https://raw.githubusercontent.com/lbr38/resources/main/ci/repomanager/operations/rpm/ci-create-env.json 2> /dev/null
+      #     curl -s -o /var/lib/repomanager/operations/pool/ci-rpm-delete.json https://raw.githubusercontent.com/lbr38/resources/main/ci/repomanager/operations/rpm/ci-delete.json 2> /dev/null
+      #     curl -s -o /var/lib/repomanager/operations/pool/ci-rpm-rebuild.json https://raw.githubusercontent.com/lbr38/resources/main/ci/repomanager/operations/rpm/ci-rebuild.json 2> /dev/null
 
-      - name: Set up permissions
-        run: chown -R www-data:repomanager /var/www/repomanager /var/lib/repomanager /home/repo
+      # - name: Set up permissions
+      #   run: chown -R www-data:repomanager /var/www/repomanager /var/lib/repomanager /home/repo
 
-      - name: Update database
-        run: |
-          /bin/su -s /bin/bash -c "php /var/www/repomanager/tools/initialize-database.php" www-data
-          /bin/su -s /bin/bash -c "php /var/www/repomanager/tools/update-database.php" www-data
+      # - name: Update database
+      #   run: |
+      #     /bin/su -s /bin/bash -c "php /var/www/repomanager/tools/initialize-database.php" www-data
+      #     /bin/su -s /bin/bash -c "php /var/www/repomanager/tools/update-database.php" www-data
 
-      # deb
-      - name: Run job - Mirror deb repo
-        run: /bin/su -s /bin/bash -c "php /var/www/repomanager/operations/execute.php --id='ci-deb-mirror-repo'" www-data
+      # # deb
+      # - name: Run job - Mirror deb repo
+      #   run: /bin/su -s /bin/bash -c "php /var/www/repomanager/operations/execute.php --id='ci-deb-mirror-repo'" www-data
 
-      - name: Print mirrored deb repo content
-        run: ls -l /home/repo/debian/buster/contrib_pprd/pool/contrib/
+      # - name: Print mirrored deb repo content
+      #   run: ls -l /home/repo/debian/buster/contrib_pprd/pool/contrib/
 
-      - name: Run job - Update deb repo
-        run: /bin/su -s /bin/bash -c "php /var/www/repomanager/operations/execute.php --id='ci-deb-update-repo'" www-data
+      # - name: Run job - Update deb repo
+      #   run: /bin/su -s /bin/bash -c "php /var/www/repomanager/operations/execute.php --id='ci-deb-update-repo'" www-data
 
-      - name: Run job - Duplicate deb repo
-        run: /bin/su -s /bin/bash -c "php /var/www/repomanager/operations/execute.php --id='ci-deb-duplicate-repo'" www-data
+      # - name: Run job - Duplicate deb repo
+      #   run: /bin/su -s /bin/bash -c "php /var/www/repomanager/operations/execute.php --id='ci-deb-duplicate-repo'" www-data
 
-      - name: Print duplicated deb repo content
-        run: ls -l /home/repo/debian-copy/buster/contrib_pprd/pool/contrib/*.deb
+      # - name: Print duplicated deb repo content
+      #   run: ls -l /home/repo/debian-copy/buster/contrib_pprd/pool/contrib/*.deb
 
-      - name: Run job - Create deb repo env
-        run: /bin/su -s /bin/bash -c "php /var/www/repomanager/operations/execute.php --id='ci-deb-create-env'" www-data
+      # - name: Run job - Create deb repo env
+      #   run: /bin/su -s /bin/bash -c "php /var/www/repomanager/operations/execute.php --id='ci-deb-create-env'" www-data
 
-      - name: Run job - Rebuild deb repo
-        run: /bin/su -s /bin/bash -c "php /var/www/repomanager/operations/execute.php --id='ci-deb-rebuild'" www-data
+      # - name: Run job - Rebuild deb repo
+      #   run: /bin/su -s /bin/bash -c "php /var/www/repomanager/operations/execute.php --id='ci-deb-rebuild'" www-data
 
-      - name: Run job - Delete deb repo
-        run: /bin/su -s /bin/bash -c "php /var/www/repomanager/operations/execute.php --id='ci-deb-delete'" www-data
+      # - name: Run job - Delete deb repo
+      #   run: /bin/su -s /bin/bash -c "php /var/www/repomanager/operations/execute.php --id='ci-deb-delete'" www-data
 
-      # rpm
-      - name: Run job - Mirror rpm repo
-        run: /bin/su -s /bin/bash -c "php /var/www/repomanager/operations/execute.php --id='ci-rpm-mirror-repo'" www-data
+      # # rpm
+      # - name: Run job - Mirror rpm repo
+      #   run: /bin/su -s /bin/bash -c "php /var/www/repomanager/operations/execute.php --id='ci-rpm-mirror-repo'" www-data
 
-      - name: Print mirrored rpm repo content
-        run: ls -l /home/repo/nginx_pprd/packages/*/*.rpm
+      # - name: Print mirrored rpm repo content
+      #   run: ls -l /home/repo/nginx_pprd/packages/*/*.rpm
 
-      - name: Run job - Update rpm repo
-        run: /bin/su -s /bin/bash -c "php /var/www/repomanager/operations/execute.php --id='ci-rpm-update-repo'" www-data
+      # - name: Run job - Update rpm repo
+      #   run: /bin/su -s /bin/bash -c "php /var/www/repomanager/operations/execute.php --id='ci-rpm-update-repo'" www-data
 
-      - name: Run job - Duplicate rpm repo
-        run: /bin/su -s /bin/bash -c "php /var/www/repomanager/operations/execute.php --id='ci-rpm-duplicate-repo'" www-data
+      # - name: Run job - Duplicate rpm repo
+      #   run: /bin/su -s /bin/bash -c "php /var/www/repomanager/operations/execute.php --id='ci-rpm-duplicate-repo'" www-data
 
-      - name: Print duplicated rpm repo content
-        run: |
-          ls -l /home/repo/
-          ls -l /home/repo/nginx-copy_pprd/
+      # - name: Print duplicated rpm repo content
+      #   run: |
+      #     ls -l /home/repo/
+      #     ls -l /home/repo/nginx-copy_pprd/
 
-      - name: Run job - Create rpm repo env
-        run: /bin/su -s /bin/bash -c "php /var/www/repomanager/operations/execute.php --id='ci-rpm-create-env'" www-data
+      # - name: Run job - Create rpm repo env
+      #   run: /bin/su -s /bin/bash -c "php /var/www/repomanager/operations/execute.php --id='ci-rpm-create-env'" www-data
 
-      - name: Run job - Rebuild rpm repo
-        run: /bin/su -s /bin/bash -c "php /var/www/repomanager/operations/execute.php --id='ci-rpm-rebuild'" www-data
+      # - name: Run job - Rebuild rpm repo
+      #   run: /bin/su -s /bin/bash -c "php /var/www/repomanager/operations/execute.php --id='ci-rpm-rebuild'" www-data
 
-      - name: Run job - Delete rpm repo
-        run: /bin/su -s /bin/bash -c "php /var/www/repomanager/operations/execute.php --id='ci-rpm-delete'" www-data
+      # - name: Run job - Delete rpm repo
+      #   run: /bin/su -s /bin/bash -c "php /var/www/repomanager/operations/execute.php --id='ci-rpm-delete'" www-data
