--- a/.github/workflows/operations.yml
+++ b/.github/workflows/operations.yml
@@ -42,6 +42,8 @@ jobs:
           cp $GITHUB_WORKSPACE/www/version /var/lib/repomanager/version.available
           chown -R www-data:repomanager /var/www/repomanager /var/lib/repomanager
 
+      - name: test
+        run: ls -l /var/www/repomanager/
       # - name: Set up repomanager files & directories
       #   run: |
       #     groupadd repomanager
