--- a/.github/workflows/operations.yml
+++ b/.github/workflows/operations.yml
@@ -128,7 +128,7 @@ jobs:
         run: /bin/su -s /bin/bash -c "php /var/www/repomanager/operations/execute.php --id='ci-deb-mirror-repo'" www-data
 
       - name: Print mirrored deb repo content
-        run: ls -l /home/repo/debian/buster/contrib_pprd/pool/contrib/
+        run: ls -l /home/repo/
 
       # - name: Run job - Update deb repo
       #   run: /bin/su -s /bin/bash -c "php /var/www/repomanager/operations/execute.php --id='ci-deb-update-repo'" www-data
