--- a/docker/config/nginx/repomanager.conf
+++ b/docker/config/nginx/repomanager.conf
@@ -102,7 +102,7 @@ server {
 
     location ~ \.(?:css|js|woff2?|svg|gif|map)$ {
         try_files $uri $uri/ =404;
-        add_header Cache-Control "public, max-age=15778463";
+        add_header Cache-Control "public, max-age=3600";
         add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload;" always;
         add_header Referrer-Policy "no-referrer" always;
         add_header X-Content-Type-Options "nosniff" always;
