feat: Add http_proxy and cert_path to app config template

--- a/www/templates/app.yaml
+++ b/www/templates/app.yaml
@@ -65,3 +65,11 @@ oidc:
   # Groups value for Super Administrator
   # Default Value: super-administrator
   #group_super_administrator: super-administrator
+
+  # HTTP Proxy
+  # Default Value: not set
+  #http_proxy:
+
+  # Path to cert file
+  # Default Value: not set
+  #cert_path:
