--- a/docker/config/nginx/repomanager.conf
+++ b/docker/config/nginx/repomanager.conf
@@ -19,6 +19,9 @@ server {
     listen 8080;
     server_name 127.0.0.1;
 
+    # Disable specifying the port in absolute redirects issued by nginx (https://github.com/lbr38/repomanager/issues/259)
+    port_in_redirect off;
+
     # Path to log files
     access_log /var/log/nginx/repomanager_access.log repomanager if=$loggable;
     error_log /var/log/nginx/repomanager_error.log;
