--- a/docker/config/nginx/repomanager.conf
+++ b/docker/config/nginx/repomanager.conf
@@ -15,6 +15,7 @@ server {
     # Set repomanager base directories variables
     set $WWW_DIR '/var/www/repomanager';        # default is /var/www/repomanager
     set $REPOS_DIR '/home/repo';                # default is /home/repo
+    set $WEBSOCKET_LISTEN_PORT 8081;            # default is 8081
 
     listen 8080;
     server_name 127.0.0.1;
@@ -131,7 +132,7 @@ server {
 
     # Websocket server
     location /ws {
-        proxy_pass http://127.0.0.1:8081;
+        proxy_pass http://127.0.0.1:$WEBSOCKET_LISTEN_PORT;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "Upgrade";
