--- a/.github/workflows/api-test.yml
+++ b/.github/workflows/api-test.yml
@@ -17,8 +17,20 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install curl
-        run: sudo apt-get install curl jq -y
+        run: sudo apt-get install curl jq wget -y
 
+      # Wait for the target URL to be ready
+      # Generally after the 30 first minutes of the current hour
+      - name: Wait until API URL is ready
+        run: |
+          while (true); do
+            if $(date +%M | grep -q '^[3-5][0-9]$'); then
+              break
+            fi
+
+            sleep 60
+          done
+            
       - name: Check if API is reachable
         run: |
           RESULT=$(curl -s -q --fail-with-body ${{ secrets.API_TEST_HOST }})
@@ -26,6 +38,15 @@ jobs:
               echo "API is not unreachable"
               exit 1
           fi
+
+      #
+      # Download rpm and deb packages from https://packages.repomanager.net that will be used for upload testing
+      # To avoid an upload test failure due to the package already been uploaded (when multiple pipelines run at the same time), prefix them with the hostname of the CI runner
+      #
+      - name: Download test packages
+        run: |
+          wget -O ${HOSTNAME}_nginx-1.26.0-1.el7.ngx.x86_64.rpm https://packages.repomanager.net/repo/ci-test_prod/packages/x86_64/nginx-1.26.0-1.el7.ngx.x86_64.rpm
+          wget -O ${HOSTNAME}_nginx_1.26.0-1~bookworm_amd64.deb https://packages.repomanager.net/repo/ci-test/bookworm/main_prod/pool/main/nginx_1.26.0-1~bookworm_amd64.deb
 
       #
       # Run tests as admin user
@@ -60,3 +81,32 @@ jobs:
               echo "Failed to unregister host"
               exit 1
           fi
+
+      # Upload a deb package using the admin API key
+      # Generate a unique package name to avoid conflicts when multiple pipelines run at the same time
+      - name: (admin) Try to upload a deb package with an admin API key
+        run: |
+          RANDOM=$(date +%s)
+          PACKAGE_NAME="${RANDOM}-${HOSTNAME}-admin_nginx_1.26.0-1~bookworm_amd64.deb"
+
+          cp ${HOSTNAME}_nginx_1.26.0-1~bookworm_amd64.deb $PACKAGE_NAME
+          curl --fail-with-body -L --post301 -s -q -X POST -H "Authorization: Bearer ${{ secrets.API_TEST_ADMIN_API_KEY }}" -F "files=@${PACKAGE_NAME}" https://ci-test.repomanager.net/api/v2/snapshot/1/upload
+          if [ $? -ne 0 ]; then
+              echo "Failed to upload deb package"
+              exit 1
+          fi
+
+      # Upload an rpm package using the admin API key
+      # Generate a unique package name to avoid conflicts when multiple pipelines run at the same time
+      - name: (admin) Try to upload an rpm package with an admin API key
+        run: |
+          RANDOM=$(date +%s)
+          PACKAGE_NAME="${RANDOM}-${HOSTNAME}-admin_nginx-1.26.0-1.el7.ngx.x86_64.rpm"
+  
+          cp ${HOSTNAME}_nginx-1.26.0-1.el7.ngx.x86_64.rpm $PACKAGE_NAME
+          curl --fail-with-body -L --post301 -s -q -X POST -H "Authorization: Bearer ${{ secrets.API_TEST_ADMIN_API_KEY }}" -F "files=@${PACKAGE_NAME}" https://ci-test.repomanager.net/api/v2/snapshot/2/upload
+          if [ $? -ne 0 ]; then
+              echo "Failed to upload rpm package"
+              exit 1
+          fi
+      
